--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,11 @@
 version: '3'
 services:
  odoo:
-   image: odoo:16.0 #image of the odoo
-   env_file: .env #environment file(contains odoo environment)
-   depends_on:
-     - postgres
+   image: odoo:16.0
+   env_file: .env
    ports:
-     - "8000:8069" #port mapping
-   volumes: #mapping directory
+     - "8000:8069"
+   volumes:
      - ./data:/var/lib/odoo
      - ./config:/etc/odoo 
      - ./custom-addons:/mnt/custom-addons
- postgres: 
-   image: postgres:14 #postgres image
-   env_file: .env #environment file(contains postgres environment)
-   volumes:
-     - ./db:/var/lib/postgresql/data/pgdata
-volumes:
- data:
- db:
-
-
-
-
-#  version: '3'
-# services:
-#  odoo:
-#    image: odoo:15.0 #image of the odoo
-#    env_file: .env #environment file(contains odoo environment)
-#    depends_on:
-#      - postgres
-#    ports:
-#      - "8000:8069" #port mapping
-#    volumes: #mapping directory
-#      - data:/var/lib/odoo
-#      - ./config:/etc/odoo 
-#      - ./custom-addons:/mnt/custom-addons
-#  postgres: 
-#    image: postgres:13 #postgres image
-#    env_file: .env #environment file(contains postgres environment)
-#    volumes:
-#      - db:/var/lib/postgresql/data/pgdata
-# volumes:
-#  data:
-#  db:
